--- a/ALEXNET.ipynb
+++ b/ALEXNET.ipynb
@@ -24,26 +24,15 @@
    "source": [
     "import torch\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
-    "print(device)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(device)\n",
     "\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "import torchvision\n",
     "from torch import nn\n",
     "from torchvision import transforms, datasets\n",
-    "from torch.utils.data import DataLoader\n",
-    "# from torchinfo import summary\n",
-    "from torch.utils import data\n",
-    "import torch.nn.functional as F\n",
-    "\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n"
+    "from torch.utils.data import DataLoader"
    ]
   },
   {
@@ -470,7 +459,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('pytorch')",
+   "display_name": "Python 3.8.13 ('pytorch')",
    "language": "python",
    "name": "python3"
   },
@@ -484,12 +473,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "4e8439e14a3c9d40e89aa31be7be8fe13eecb504fa234901bb42ac4ca6122099"
+    "hash": "6eb4257dd074220a488ae27c7968cbbe818e97418c68dece4dca5dcb071601ca"
    }
   }
  },
