--- a/ALEXNET.ipynb
+++ b/ALEXNET.ipynb
@@ -279,6 +279,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avg_testacc = []\n",
+    "avg_trnacc = []\n",
+    "avg_trnloss = []\n",
+    "avg_tesloss = []\n",
+    "\n",
+    "loss_history = []\n",
+    "\n",
+    "\n",
+    "acc_hist = []"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
@@ -303,6 +320,7 @@
     "\n",
     "            # print statistics\n",
     "            running_loss += loss.item()\n",
+    "            loss_history.append(loss.item()/64)\n",
     "            if i % 2000 == 1999:    # print every 2000 mini-batches\n",
     "                print('[%d, %5d] loss: %.3f' %\n",
     "                    (epoch + 1, i + 1, running_loss / 2000))\n",
@@ -375,6 +393,7 @@
     "        _, predicted = torch.max(outputs.data, 1)\n",
     "        total += labels.size(0)\n",
     "        correct += (predicted == labels).sum().item()\n",
+    "        acc_hist.append(correct/total*100)\n",
     "\n",
     "print('Accuracy of the network on the 10000 test images: %d %%' % (\n",
     "    100 * correct / total))\n",
@@ -396,6 +415,32 @@
     "for i in range(2):\n",
     "    print('Accuracy of %5s : %2d %%' % (\n",
     "        classes[i], 100 * class_correct[i] / 708))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(acc_hist)\n",
+    "plt.title('LOSS PER EPOCH')\n",
+    "plt.xlabel('BATCH')\n",
+    "plt.ylabel('LOSS')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(loss_history)\n",
+    "plt.title('LOSS PER EPOCH')\n",
+    "plt.xlabel('BATCH')\n",
+    "plt.ylabel('LOSS')\n",
+    "plt.show()"
    ]
   },
   {
