--- a/RESNET.ipynb
+++ b/RESNET.ipynb
@@ -120,6 +120,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acc_hist = []\n",
+    "\n",
+    "loss_hist = []"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -570,6 +581,7 @@
     "\n",
     "            # print statistics\n",
     "            running_loss += loss.item()\n",
+    "            loss_hist.append(loss.item())\n",
     "            if i % 2000 == 1999:    # print every 2000 mini-batches\n",
     "                print('[%d, %5d] loss: %.3f' %\n",
     "                    (epoch + 1, i + 1, running_loss / 2000))\n",
@@ -625,6 +637,7 @@
     "        _, predicted = torch.max(outputs.data, 1)\n",
     "        total += labels.size(0)\n",
     "        correct += (predicted == labels).sum().item()\n",
+    "        acc_hist.append(correct)\n",
     "\n",
     "print('Accuracy of the network on the 10000 test images: %d %%' % (\n",
     "    100 * correct / total))\n",
@@ -646,6 +659,32 @@
     "for i in range(2):\n",
     "    print('Accuracy of %5s : %2d %%' % (\n",
     "        classes[i], 100 * class_correct[i] / 708))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(acc_hist)\n",
+    "plt.title('ACC PER EPOCH')\n",
+    "plt.xlabel('BATCH')\n",
+    "plt.ylabel('LOSS')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(loss_hist)\n",
+    "plt.title('LOSS PER EPOCH')\n",
+    "plt.xlabel('BATCH')\n",
+    "plt.ylabel('LOSS')\n",
+    "plt.show()"
    ]
   },
   {
@@ -709,7 +748,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('pytorch')",
+   "display_name": "Python 3.10.3 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -723,12 +762,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.3"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "4e8439e14a3c9d40e89aa31be7be8fe13eecb504fa234901bb42ac4ca6122099"
+    "hash": "0265c8f116561e8b30709098fa1f6104b8b8ba1ebeccc27ef3fe2a7540473d17"
    }
   }
  },
