changed resnet 50 to resnet 34

--- a/RESNET.ipynb
+++ b/RESNET.ipynb
@@ -255,58 +255,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class ResNet(nn.Module):\n",
-    "    def __init__(self, in_channels, resblock, repeat, useBottleneck=False, outputs=1000):\n",
-    "        super().__init__()\n",
-    "        self.layer0 = nn.Sequential(\n",
-    "            nn.Conv2d(in_channels, 64, kernel_size=7, stride=2, padding=3),\n",
-    "            nn.MaxPool2d(kernel_size=3, stride=2, padding=1),\n",
+    "class ResNet34(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(ResNet34,self).__init__()\n",
+    "        \n",
+    "        self.block1 = nn.Sequential(\n",
+    "            nn.Conv2d(1,64,kernel_size=2,stride=2,padding=3,bias=False),\n",
     "            nn.BatchNorm2d(64),\n",
-    "            nn.ReLU()\n",
+    "            nn.ReLU(True)\n",
+    "        )\n",
+    "        \n",
+    "        self.block2 = nn.Sequential(\n",
+    "            nn.MaxPool2d(1,1),\n",
+    "            ResidualBlock(64,64),\n",
+    "            ResidualBlock(64,64,2)\n",
     "        )\n",
     "\n",
-    "        if useBottleneck:\n",
-    "            filters = [64, 256, 512, 1024, 2048]\n",
-    "        else:\n",
-    "            filters = [64, 64, 128, 256, 512]\n",
     "\n",
-    "        self.layer1 = nn.Sequential()\n",
-    "        self.layer1.add_module('conv2_1', resblock(filters[0], filters[1], downsample=False))\n",
-    "        for i in range(1, repeat[0]):\n",
-    "                self.layer1.add_module('conv2_%d'%(i+1,), resblock(filters[1], filters[1], downsample=False))\n",
-    "\n",
-    "        self.layer2 = nn.Sequential()\n",
-    "        self.layer2.add_module('conv3_1', resblock(filters[1], filters[2], downsample=True))\n",
-    "        for i in range(1, repeat[1]):\n",
-    "                self.layer2.add_module('conv3_%d' % (\n",
-    "                    i+1,), resblock(filters[2], filters[2], downsample=False))\n",
-    "\n",
-    "        self.layer3 = nn.Sequential()\n",
-    "        self.layer3.add_module('conv4_1', resblock(filters[2], filters[3], downsample=True))\n",
-    "        for i in range(1, repeat[2]):\n",
-    "            self.layer3.add_module('conv2_%d' % (\n",
-    "                i+1,), resblock(filters[3], filters[3], downsample=False))\n",
-    "\n",
-    "        self.layer4 = nn.Sequential()\n",
-    "        self.layer4.add_module('conv5_1', resblock(filters[3], filters[4], downsample=True))\n",
-    "        for i in range(1, repeat[3]):\n",
-    "            self.layer4.add_module('conv3_%d'%(i+1,),resblock(filters[4], filters[4], downsample=False))\n",
-    "\n",
-    "        self.gap = torch.nn.AdaptiveAvgPool2d(1)\n",
-    "        self.fc = torch.nn.Linear(filters[4], outputs)\n",
-    "\n",
-    "    def forward(self, input):\n",
-    "        input = self.layer0(input)\n",
-    "        input = self.layer1(input)\n",
-    "        input = self.layer2(input)\n",
-    "        input = self.layer3(input)\n",
-    "        input = self.layer4(input)\n",
-    "        input = self.gap(input)\n",
+    "        self.block3 = nn.Sequential(\n",
+    "            ResidualBlock(64,128),\n",
+    "            ResidualBlock(128,128,2)\n",
+    "        )\n",
     "        \n",
-    "        input = torch.flatten(input, start_dim=1)\n",
-    "        input = self.fc(input)\n",
+    "        self.block4 = nn.Sequential(\n",
+    "            ResidualBlock(128,256),\n",
+    "            ResidualBlock(256,256,2)\n",
+    "        )\n",
+    "        self.block5 = nn.Sequential(\n",
+    "            ResidualBlock(256,512),\n",
+    "            ResidualBlock(512,512,2)\n",
+    "        )\n",
+    "        \n",
+    "        self.avgpool = nn.AvgPool2d(2)\n",
+    "        # vowel_diacritic\n",
+    "        self.fc1 = nn.Linear(512,11)\n",
+    "        # grapheme_root\n",
+    "        self.fc2 = nn.Linear(512,168)\n",
+    "        # consonant_diacritic\n",
+    "        self.fc3 = nn.Linear(512,7)\n",
+    "        \n",
+    "    def forward(self,x):\n",
+    "        x = self.block1(x)\n",
+    "        x = self.block2(x)\n",
+    "        x = self.block3(x)\n",
+    "        x = self.block4(x)\n",
+    "        x = self.block5(x)\n",
+    "        x = self.avgpool(x)\n",
+    "        x = x.view(x.size(0),-1)\n",
+    "        x1 = self.fc1(x)\n",
+    "        x2 = self.fc2(x1)\n",
+    "        x3 = self.fc3(x2)\n",
     "\n",
-    "        return input"
+    "        return x3"
    ]
   },
   {
@@ -499,10 +499,7 @@
     }
    ],
    "source": [
-    "resnet50 = ResNet(3, ResBottleneckBlock, [\n",
-    "                  3, 4, 6, 3], useBottleneck=True, outputs=1000)\n",
-    "resnet50.to(torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\"))\n",
-    "     "
+    "resnet50 = ResNet34()"
    ]
   },
   {
