--- a/RESNET.ipynb
+++ b/RESNET.ipynb
@@ -24,7 +24,8 @@
    "source": [
     "import torch\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
-    "print(device)\n"
+    "print(device)\n",
+    "    "
    ]
   },
   {
@@ -61,7 +62,7 @@
     "\n",
     "# Create starter transform\n",
     "train_transform = transforms.Compose([\n",
-    "    transforms.Resize((224, 224)),\n",
+    "    transforms.Resize((64, 64)),\n",
     "    transforms.RandomHorizontalFlip(),\n",
     "    transforms.RandomRotation(degrees=90),\n",
     "    \n",
@@ -69,7 +70,7 @@
     "    normalize\n",
     "])\n",
     "\n",
-    "test_transform = transforms.Compose([transforms.Resize((224, 224)),\n",
+    "test_transform = transforms.Compose([transforms.Resize((64, 64)),\n",
     "    transforms.ToTensor(),\n",
     "    normalize\n",
     "])           \n",
@@ -163,8 +164,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataloader = DataLoader(train_dataset, batch_size=64, shuffle=True, num_workers= 4)\n",
-    "test_dataloader = DataLoader(test_dataset, batch_size=64, shuffle=False , num_workers=4)\n",
+    "train_dataloader = DataLoader(train_dataset, batch_size=32, shuffle=True, num_workers= 4)\n",
+    "test_dataloader = DataLoader(test_dataset, batch_size=32, shuffle=False , num_workers=4)\n",
     "classes = (\"negative\", \"positive\")\n"
    ]
   },
@@ -260,20 +261,20 @@
     "        super(ResNet34,self).__init__()\n",
     "        \n",
     "        self.block1 = nn.Sequential(\n",
-    "            nn.Conv2d(1,64,kernel_size=2,stride=2,padding=3,bias=False),\n",
-    "            nn.BatchNorm2d(64),\n",
+    "            nn.Conv2d(1,32,kernel_size=2,stride=2,padding=3,bias=False),\n",
+    "            nn.BatchNorm2d(32),\n",
     "            nn.ReLU(True)\n",
     "        )\n",
     "        \n",
     "        self.block2 = nn.Sequential(\n",
     "            nn.MaxPool2d(1,1),\n",
-    "            ResidualBlock(64,64),\n",
-    "            ResidualBlock(64,64,2)\n",
+    "            ResidualBlock(32,32),\n",
+    "            ResidualBlock(32,32,2)\n",
     "        )\n",
     "\n",
     "\n",
     "        self.block3 = nn.Sequential(\n",
-    "            ResidualBlock(64,128),\n",
+    "            ResidualBlock(32,128),\n",
     "            ResidualBlock(128,128,2)\n",
     "        )\n",
     "        \n",
